--- a/package.json
+++ b/package.json
@@ -23,12 +23,16 @@
     "zone.js": "~0.14.10"
   },
   "devDependencies": {
+    "@angular-builders/jest": "^18.0.0",
     "@angular-devkit/build-angular": "^18.2.11",
     "@angular/cli": "^18.2.11",
     "@angular/compiler-cli": "^18.2.0",
     "@types/jasmine": "~5.1.0",
+    "@types/jest": "^29.5.14",
     "autoprefixer": "^10.4.20",
     "jasmine-core": "~5.2.0",
+    "jest": "^29.7.0",
+    "jest-preset-angular": "^14.5.3",
     "karma": "~6.4.0",
     "karma-chrome-launcher": "~3.2.0",
     "karma-coverage": "~2.2.0",
@@ -36,6 +40,7 @@
     "karma-jasmine-html-reporter": "~2.1.0",
     "postcss": "^8.5.3",
     "tailwindcss": "^3.4.17",
+    "ts-jest": "^29.2.6",
     "typescript": "~5.5.2"
   }
 }
