--- a/angular.json
+++ b/angular.json
@@ -29,7 +29,10 @@
                 "input": "public"
               }
             ],
-            "styles": ["src/tailwindcss.css"],
+            "styles": [
+              "src/tailwindcss.css",
+              "node_modules/@fortawesome/fontawesome-free/css/all.min.css"
+            ],
             "scripts": []
           },
           "configurations": {
